# send-image

./: Procfile  README.md  pyproject.toml
send-image/: app.py  sendemail.py
send-image/static/css/: uploader.css
send-image/static/js/: scripts.js
send-image/template/: upload.html
